--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,6 @@ header {
 }
 .text-work{
   font-size: 35px;
-  /*letter-spacing: 2px;*/
 }
 .box-work img.img-work{
   width: 70%;
@@ -98,22 +97,21 @@ header {
   cursor: pointer;
 }
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 20px; /* Location of the box */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 20px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(72,241,164,0.8); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(72,241,164,0.8);
 }
 
 /* Modal Content */
 .modal-content {
-    /*background-color: #fefefe;*/
     margin: 0 auto;
     border: 14px solid white;
     width: 50%;
@@ -122,7 +120,7 @@ header {
   width: 100%;
   margin: 0 auto;
 }
-/* The Close Button */
+/* The Close Sopan */
 .close {
   /*display: none;*/
   color: #48F1A4;
@@ -135,7 +133,6 @@ header {
 
 .close:hover,
 .close:focus {
-    /*display: none;*/
     color: #fff;
     text-decoration: none;
     cursor: pointer;
